# SpiderBot

./: Makefile.in  Makefile.linux  Makefile.sunos  README.md  configure.in  install.sh
SpiderBot/: Makefile.in  Makefile.linux  Makefile.sunos  SpiderBot.c  c_spiderbot.h  l_sbotcl.c  l_sbotcl.h  l_sbotdl.c  l_sbotdl.h  l_sbotmnu.c  l_sbotmnu.h  l_sbotmsg.c  l_sbotmsg.h  l_sbotopt.c  l_sbotopt.h
doc/: GPL.txt  LGPL.txt
doc/English/: SpiderBot_how_to_use.txt  how_to_compile.txt  important.txt  mklocal_how_to_use.txt  more_info.txt  readme.txt  thanks.txt  wcat_how_to_use.txt  wcopy_how_to_use.txt  wdir_how_to_use.txt
doc/Spanish/: SpiderBot_como_usarlo.txt  agradecimientos.txt  cambios.txt  como_compilar.txt  importante.txt  leame.txt  mas_informacion.txt  mklocal_como_usar.txt  wcat_como_usar.txt  wcopy_como_usar.txt  wdir_como_usar.txt
doc/html/: empty.html  how_compile.html  index.html  inside.html  more_documents.html  protocol.html  thanks.html
lib/: Makefile.in  Makefile.linux  Makefile.sunos
lib/corelib/: Makefile.in  Makefile.linux  Makefile.sunos
lib/corelib/l_adt/: l_buffa.c  l_buffa.h  l_buffw.c  l_buffw.h  l_darray.c  l_darray.h  l_dhash.c  l_dhash.h  l_dnodo.c  l_dnodo.h  l_dstack.c  l_dstack.h  l_mfile.c  l_mfile.h
lib/corelib/l_alloc/: i_alloc_debug.c  i_alloc_debug.h  i_alloc_final.c  i_alloc_final.h  i_alloc_final.m  v_alloc.c  v_alloc.h  v_alloc.m  x_alloc.c  x_alloc.h  x_alloc.m
lib/corelib/l_basic/: c_basic.h
lib/corelib/l_cdt/: l_dirstk.c  l_dirstk.h  l_iobuff.c  l_iobuff.h  l_strli.c  l_strli.h
lib/corelib/l_cl/: l_cl.c  l_cl.h
lib/corelib/l_crcfg/: c_crcfg.h  c_crver.h  crcfg.txt
lib/corelib/l_debug/: l_debug.c  l_debug.h  l_debug.m  l_debug_fsm.c  l_debug_fsm.h  (+2 more)
lib/uilib/: Makefile.in  Makefile.linux  Makefile.sunos
lib/weblib/: Makefile.in  Makefile.linux  Makefile.sunos
lib/wpplib/: Makefile.in  Makefile.linux  Makefile.sunos
mklocal/: Makefile.in  Makefile.linux  Makefile.sunos  c_mklocal.h  l_mkcl.c  l_mkcl.h  l_mklocal.c  l_mklocal.h  l_mkmsg.c  l_mkmsg.h  l_mkopt.c  l_mkopt.h  mklocal.c
wcat/: Makefile.in  Makefile.linux  Makefile.sunos  c_wcat.h  l_wcat.c  l_wcat.h  l_wctdl.c  l_wctdl.h  l_wctmsg.c  l_wctmsg.h  wcat.c
wcopy/: Makefile.in  Makefile.linux  Makefile.sunos  c_wcopy.h  l_wcopy.c  l_wcopy.h  l_wcpdl.c  l_wcpdl.h  l_wcpmsg.c  l_wcpmsg.h  wcopy.c
wdir/: Makefile.in  Makefile.linux  Makefile.sunos  c_wdir.h  l_wdir.c  l_wdir.h  l_wlsdl.c  l_wlsdl.h  l_wlsmsg.c  l_wlsmsg.h  wdir.c
wtools/: Makefile.in  Makefile.linux  Makefile.sunos  c_wtools.h  l_wtmsg.c  l_wtmsg.h  wtools.c
(+288 files in other folders)
